<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MOOC</string>
    <string name="taday">今天</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="rest">重置</string>
    <string name="loginname">用户名</string>
    <string name="password">密码</string>
    <string name="IPadress">IP地址</string>
    <string name="find">查询</string>
    <string name="findcaipu">中华菜谱</string>
    <string name="locationfind">定位查询</string>
    <string name="findresult">查询结果</string>
    <string name="inputIPadress">请输入您要查询的IP地址</string>
    <string name="kuaidicom">快递公司代码</string>
    <string name="kuadicomhint">请输入你要查询的快递公司代码</string>
    <string name="kuaidino">快递单号</string>
    <string name="kuaidinohint">请输入你要查询的快递单号</string>
    <string name="traincheci">车次查询</string>
    <string name="checi">车次:</string>
    <string name="findchecihint">请输入车次如：g208</string>
    <string name="zhi">  至</string>
    <string name="starttime">发车时间</string>
    <string name="endtime">到达时间</string>
    <string name="train_id">序号</string>
    <string name="station_name">车站</string>
    <string name="stay">时长</string>
    <string name="Smileage">里  程</string>
    <string name="zhanzhan">站站查询</string>
    <string name="from">出发站</string>
    <string name="to">到达站</string>
    <string name="date">出发日期</string>
    <string name="findpiaojia">票价查询</string>
    <string name="findyupiao">余票查询</string>
    <string name="datehint">时间:2015–01–01</string>
    <string name="chaxun">车票查询</string>
    <string name="findkuaidicom">请选择快递公司</string>
    <string name="xinxichaxun">车站信息查询</string>
     <string name="chezhanchaxun">车站查询</string>
      <string name="chengshi_hint">城市</string>
    <string name="mudidi">终点站</string>
    <string name="qishidi">起始站</string>
    <string name="jieguo">查询结果</string>
    <string name="kuaidijieguo">客官，您的快递就在这：</string>
    <string name="mudidi1">目的地</string>
    <string name="qishidi1">起始地</string>
    <string name="riqi">出发日期</string>
    <string name="coach_time">时间：</string>
    <string name="jiage">票价：</string>
    <string name="chengshi">城市</string>
    <string name="chezhan">车站</string>
    <string name="weizhi">位置</string>
    <string name="luxian">路线</string>
    <string name="coach_naem">站点</string>
    <string name="coach_tel">电话：</string>
    <string name="coach_adds">地址：</string>
    <string name="danhao">请输入快递单号</string>
    <string name="kuaidi">请选择快递</string>
    <string name="zhongtong">中通快递</string>
    <string name="yunda">韵达快递</string>
    <string name="huitong">汇通快递</string>
    <string name="yuantong">圆通快递</string>
    <string name="tiantian">天天快递</string>
    <string name="shunfeng">顺丰快递</string>
    <string name="ems">EMS</string>
    <string name="shentong">申通快递</string>
    <string name="save">确认</string>
    <string name="trainfrom_hint">出发站</string>
    <string name="trainto_hint">目的站</string>
    <string name="train_checi_xuhao">序号</string>
    <string name="train_checi_fache">发车时间</string>
    <string name="train_checi_daozhan">到站时间</string>
    <string name="train_checi_shichang">时长</string>
    <string name="train_checi_licheng">里程</string>
    <string name="kuadi_com_hint">您选择的快递公司</string>
    <string name="tel_chongzhi_num">手机号码:</string>
    <string name="tel_chongzhi_miane">充值金额:</string>
    <string name="tel_chongzhi_10">10元</string>
    <string name="tel_chongzhi_20">20元</string>
    <string name="tel_chongzhi_30">30元</string>
    <string name="tel_chongzhi_50">50元</string>
    <string name="tel_chongzhi_100">100元</string>
    <string name="tel_chongzhi_300">300元</string>
    <string name="tel_chongzhi_price">购买价格:</string>
    <string name="tel_chongzhi_chongzhi">充值</string>
    <string name="shoujia">售价：</string>
    <string name="guishudi">归属地</string>
    <string name="shuaxin">刷新</string>
    <string name="txt_name">内容</string>
    <string name="edt_name">输入查询内容</string>
    <string name="phonetic"></string>
    <string name="phonetic_name">英</string>
    <string name="us_phonetic"></string>
    <string name="us_phonetic_name">美</string>
    <string name="caipufind_hint">菜谱名</string>
    <string name="result">查询结果</string>
    <string name="train_title_2">车次查询</string>
    <string name="train_title_3">站站查询</string>

    <style name="CustomDialog" parent="@android:style/Theme.Dialog"> 
    <item name="android:windowFrame">@null</item> 
        <item name="android:windowIsFloating">true</item> 
        <item name="android:windowContentOverlay">@null</item> 
        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item> 
        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item> 
    </style> 
       
    <style name="CustomProgressDialog" parent="@style/CustomDialog"> 
        <item name="android:windowBackground">@android:color/transparent</item> 
        <item name="android:windowNoTitle">true</item> 
    </style>
    
    
</resources>